--- a/assets/css/views/stores/dashboard.css
+++ b/assets/css/views/stores/dashboard.css
@@ -1,7 +1,7 @@
 /* Variáveis e configurações globais */
 :root {
     --primary-color: #012f63;
-    --primary-dark: #00336d;
+    --primary-dark: #012f63;
     --primary-light: #FFF0E6;
     --secondary-color: #2A3F54;
     --success-color: #28A745;
