--- a/assets/css/views/stores/dashboard.css
+++ b/assets/css/views/stores/dashboard.css
@@ -4,7 +4,7 @@
     --primary-dark: #012f63;
     --primary-light: #FFF0E6;
     --secondary-color: #2A3F54;
-    --success-color: #28A745;
+    --success-color: #012f63;
     --warning-color: #FFC107; 
     --danger-color: #DC3545;
     --info-color: #17A2B8;
