--- a/assets/css/views/stores/payment-history.css
+++ b/assets/css/views/stores/payment-history.css
@@ -1,7 +1,7 @@
 /* assets/css/views/stores/payment-history.css */
 
 :root {
-    --primary-color: #FF7A00;
+    --primary-color: #012f63;
     --primary-light: #FFF0E6;
     --white: #FFFFFF;
     --light-gray: #F5F5F5;
