--- a/assets/css/views/stores/dashboard.css
+++ b/assets/css/views/stores/dashboard.css
@@ -1,10 +1,10 @@
 /* Variáveis e configurações globais */
 :root {
-    --primary-color: #012f63;
-    --primary-dark: #012f63;
+    --primary-color: #FF7A00;
+    --primary-dark: #E06E00;
     --primary-light: #FFF0E6;
     --secondary-color: #2A3F54;
-    --success-color: #012f63;
+    --success-color: #28A745;
     --warning-color: #FFC107; 
     --danger-color: #DC3545;
     --info-color: #17A2B8;
