--- a/assets/css/views/stores/payment-pix.css
+++ b/assets/css/views/stores/payment-pix.css
@@ -17,8 +17,8 @@
 }
 
 :root {
-    --primary: #012f63;
-    --primary-dark: #012f63;
+    --primary: #FF7A00;
+    --primary-dark: #E06E00;
     --primary-light: #FFF0E6;
     --success: #10B981;
     --success-light: #D1FAE5;
