--- a/assets/css/views/stores/payment.css
+++ b/assets/css/views/stores/payment.css
@@ -1,9 +1,9 @@
 /* assets/css/views/stores/payment.css */
 
 :root {
-    --primary-color: #012f63;
+    --primary-color: #FF7A00;
     --primary-light: #FFF0E6;
-    --primary-dark: #012f63;
+    --primary-dark: #E06E00;
     --white: #FFFFFF;
     --light-gray: #F8F9FA;
     --medium-gray: #6C757D;
